fix: Fix the navigation of the references and the display of the reference box on mobile.

--- a/constit/static/style/style.css
+++ b/constit/static/style/style.css
@@ -15026,7 +15026,11 @@ body.dark-mode .study-info-show {
 }
 
 .show-references,
-    .refrences,
-    .nested-ref {
-        display: none;
-    }
+.refrences,
+.nested-ref {
+    display: none;
+}
+
+.refrences li {
+    scroll-margin-top: 140px;
+}
